[gd_scene load_steps=9 format=2]

[ext_resource path="res://Grid.gd" type="Script" id=1]
[ext_resource path="res://Textures/gradient.png" type="Texture" id=7]
[ext_resource path="res://TestLevel.gd" type="Script" id=8]
[ext_resource path="res://UI/UI.gd" type="Script" id=9]
[ext_resource path="res://UI/ScoreLabel.gd" type="Script" id=10]
[ext_resource path="res://Resources/Montserrat-Regular.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="TestLevel" type="Node2D"]
script = ExtResource( 8 )

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="SwapTimer" type="Timer" parent="Grid"]
wait_time = 0.3
one_shot = true

[node name="DropTimer" type="Timer" parent="Grid"]
one_shot = true

[node name="DropMask" type="Light2D" parent="Grid"]
position = Vector2( 509.5, 9.5 )
scale = Vector2( 4.17578, 0.222656 )
texture = ExtResource( 7 )
mode = 3
range_item_cull_mask = 2

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="LeftBar" type="Control" parent="UI"]
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 600 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScoreLabel" type="Label" parent="UI/LeftBar"]
margin_left = 5.0
margin_right = 130.0
margin_bottom = 84.0
rect_min_size = Vector2( 120, 80 )
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 10, 10 )
theme = SubResource( 2 )
text = "0"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="UI/LeftBar/ScoreLabel"]

[connection signal="award_points" from="Grid" to="." method="_on_Grid_award_points"]
[connection signal="timeout" from="Grid/SwapTimer" to="Grid" method="_on_SwapTimer_timeout"]
[connection signal="timeout" from="Grid/DropTimer" to="Grid" method="_on_DropTimer_timeout"]
